--- a/.gitattributes
+++ b/.gitattributes
@@ -20,6 +20,7 @@
 #Video
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.mov filter=lfs diff=lfs merge=lfs -text
+*.wmv filter=lfs diff=lfs merge=lfs -text
 
 #3D Object
 *.FBX filter=lfs diff=lfs merge=lfs -text
